examples/test/testpolicy18698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18698
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key24: value31
      key35: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value14
          key26: value17
      podSelector:
        matchLabels:
          key41: value40
          key18: value45
